syntax = "proto3";

option csharp_namespace = "inventory.Protos";

package inventory;

message userInstance {
    int32 Id = 1;
    string UserName = 2;
    string Name =3;
    int32 Age = 4;
    string Role = 5;
    string BattingStyles = 6;
    string BlowingStyles = 7;
    string Password = 8;
    bool IsExternal = 9;
    int32 Runs = 10;
    int32 Wickets = 11;
    int32 Matches = 12;
}

message userInstanceRequest{
    int32 Id = 1;
    string UserName = 2;
    string Password = 8;
    string Name =3;
    int32 Age = 4;
    string Role = 5;
    string BattingStyle = 6;
    string BlowingStyle = 7;
}

message teamMemberInstance{
    int32 Id = 1;
    int32 userId = 2;
    bool IsCaptain = 3;
    bool IsPlaying =4;
}

message teamInstance{
    int32 Id = 1;
    string Name = 2;
    repeated teamMemberInstance Members =3;
    int32 Count = 4;
}

message inventoryData{
    userInstance user =1;
    repeated teamInstanceWithUser teams = 2;
}

message statusResponse {
    bool status = 1;
}

message teamMemberWithUsers{
    int32 Id = 1;
    userInstance user = 2;
    bool IsCaptain = 3;
    bool IsPlaying =4;
}

message teamInstanceWithUser{
    int32 Id = 1;
    string Name = 2;
    repeated teamMemberWithUsers Members =3;
    int32 Count = 4;

}

message makeCaptainInstance{
    int32 UserId=1;
    int32 TeamId=2;
}

message LeaderBoardRequest{
    int32 Page=1;
    bool Mode = 2;
}

message ListOfUser{
    repeated userInstance users = 1;
}

message MatchInstance{
    int32 Id = 1;
    int32 HostTeam_id = 2;
    int32 VisitorTeam_id = 3;
    int32 Overs = 4;
    int32 Wickets = 5;
    int32 VictoryTeam_id = 6;
    int64 StartDate = 7;
    bool IsCompleted = 8;
    int32 ScoreCardId = 9;
    bool IsHostInnings = 10;
}

